# AIF_AnayaChokhani

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.claude/: launch.json
app/: data.ts  globals.css  layout.tsx  page.tsx
app/brief/: page.tsx
app/catalogue/: page.tsx
app/chat/: page.tsx
app/components/: BeforeAfterSlider.tsx  ExportBriefClient.tsx  LoginClient.tsx  PlannerTool.tsx  SiteNav.tsx  WorkspaceClient.tsx  ZoneGrid.tsx
app/evaluation/: page.tsx
app/image-smoke/: page.tsx  smoke-items.ts
app/login/: page.tsx
app/planner/: page.tsx
app/research/: page.tsx
app/roadmap/: page.tsx
app/shopping-list/: page.tsx
app/validation/: page.tsx
app/vastu/: page.tsx
app/workspace/: page.tsx
artifacts/demo/: acceptance_run.json
artifacts/metrics/: abo_inventory.json  catalogue_validation.json  chroma_index_summary.json  curated_catalogue_summary.json  eval_failure_examples.json  eval_metric_rows.csv  eval_metric_rows.json  eval_raw_outputs.json  eval_summary.json  eval_summary_table.md  evaluation_plan_validation.json  image_mapping_summary.json  retrieval_smoke_report.json  vastu_rules_validation.json
backend/formaos/: __init__.py  contracts.py  room_state.py
data/: raw_README.md
docs/: contracts.md  data_sources.md  demo_script.md  evaluation_plan.md  product_scope.md  repository_structure.md
frontend/: README.md
scripts/: acceptance_run.mjs
tests/: acceptance-run.test.mjs  evaluation-plan.test.mjs  evaluation-results.test.mjs  frontend-backend-contract.test.mjs  rendered-html.test.mjs
(+48 files in other folders)
